Added some comments from Anton Chizhov

--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,9 @@ doi: <a href="http://dx.doi.org/10.1371/journal.pcbi.1006186">10.1371/journal.pc
 </p>
 <p>This model entry was contributed by AV Chizhov.
 </p>
-<p>This excerpt from the paper provides some specifics:
+<p>This excerpt from the paper provides some specifics.  Although the
+  drive.google.com links are broken the model code is available in this
+  modeldb entry:
 </p>
 <p>"The simulations were performed in the Delphi-7 environment. The
 mathematical analysis of the stochastic oscillations was performed
@@ -15,7 +17,7 @@ using Wolfram Mathematica 10 (Champaign, IL, USA). The Euler-Maruyama
 explicit numerical scheme was applied for the integration of the
 stochastic ordinary differential equations. The typical value of a
 time step was 0.5 ms. The results were dependent on the numerical
-parameter in a similar extent as for different realiza- tions of
+parameter in a similar extent as for different realizations of
 noise. The numerical realizations of the model are available from the
 websites: the code in Wolfram Mathematica is at
 <a href="https://yadi.sk/d/927UjbS-3QQhMW;">https://yadi.sk/d/927UjbS-3QQhMW;</a> the code and executive file in
@@ -24,12 +26,12 @@ Delphi-Pascal are at <a href="https://drive.google.com/file/d/1AJhAFKLOjvgauBF_6
 <a href="https://drive.google.com/open?id=10ij-Nt780jROcMv9qniUm4rAJNr8WD2j">https://drive.google.com/open?id=10ij-Nt780jROcMv9qniUm4rAJNr8WD2j"</a> ,
 correspondingly."
 </p>
-<p>In addition Python and JavaScript versions of Epileptor-2 are also available under
-the subfolders of the same name.
+<p> Python and JavaScript versions of Epileptor-2 are also available under the subfolders of the same name.
 </p>
 <p>The JavaScript version (available in the html file) produces the
 following after this archive is downloaded, extracted, and the html
 file is loaded into a browser (will not run from ModelDB):
 </p>
 <p><img src="./screenshot.png" alt="screenshot" width="650"></p>
+<p>The code has been originally written by me (AV Chizhov) in Delphi. It was later re-implemented in Python by Artyom Zefirov, in Wolfram Mathematica by Dmitry Amakhin, and in Javascript by me.</p>
 </html>
