--- a/readme.html
+++ b/readme.html
@@ -33,5 +33,7 @@ following after this archive is downloaded, extracted, and the html
 file is loaded into a browser (will not run from ModelDB):
 </p>
 <p><img src="./screenshot.png" alt="screenshot" width="650"></p>
+<p>The python (verified in Python 3.6.9) version produces the following graphs</p>
+<img src="./screenshot2.png" alt="screenshot 2">
 <p>The code has been originally written by me (AV Chizhov) in Delphi. It was later re-implemented in Python by Artyom Zefirov, in Wolfram Mathematica by Dmitry Amakhin, and in Javascript by me.</p>
 </html>
