updated Python file from AV Chizhov

--- a/readme.html
+++ b/readme.html
@@ -36,4 +36,5 @@ file is loaded into a browser (will not run from ModelDB):
 <p>The python (verified in Python 3.6.9) version produces the following graphs</p>
 <img src="./screenshot2.png" alt="screenshot 2">
 <p>The code has been originally written by me (AV Chizhov) in Delphi. It was later re-implemented in Python by Artyom Zefirov, in Wolfram Mathematica by Dmitry Amakhin, and in Javascript by me.</p>
+<p>20200514 update from AV Chizhov to provide corrected Python file.</p>
 </html>
